docs: add dark mode fix: dead links in doc

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -1,8 +1,13 @@
-[data-md-color-scheme="aphp"] {
+[data-md-color-scheme="default"] {
   --md-primary-fg-color:        #006bb6;
   --md-primary-fg-color--light: #006bb6;
-  --md-primary-fg-color--dark:  #ffffff;
   --md-accent-fg-color:         #006bb6;
   --md-accent-fg-color--light:  #006bb6;
-  --md-accent-fg-color--dark:   #ffffff;
+}
+
+[data-md-color-scheme="slate"] {
+  --md-primary-fg-color:        #006bb6;
+  --md-primary-fg-color--dark: #006bb6;
+  --md-accent-fg-color:         #006bb6;
+  --md-accent-fg-color--light:  #006bb6;
 }
